Modules/VM/sg.tf
resource "aws_security_group" "public_sg" {
  name        = "public_security_group"
  description = "Allow TLS inbound traffic for bastion host"
  vpc_id      = var.vpc_id

  ingress {
    description = "Alllow ssh"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "public-sg"
  }
}


resource "aws_security_group" "private_sg" {
  name   = "private_security_group"
  vpc_id = var.vpc_id

  ingress {
    description = "ssh from VPC"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    security_groups = [aws_security_group.public_sg.id] 
  }

  tags = {
    Name = "private-sg"
  }
}


resource "aws_security_group" "lb_sg" {
  name        = "lb_security_group"
  description = "Terraform load balancer security group"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "lb-sg"
  }
}
